# rsdl

./: .gitignore  Cargo.toml  LICENSE  README.txt  example.rs  type.rsdl
example/: ast.rs  ast.rsdl  ast.ts  example.rs  example.rsdl  simple.pl5  simple.rsdl  ty.rs
src/: driver.rs  lib.rs  main.rs  min_resolv.rs  parser.rs  preprocess.rs  rsdl.pest  stdlib.rsdl
src/codegen/: jlgen.rs  mod.rs  pl5gen.rs  rustgen.rs  tsgen.rs
src/parser/: hir.rs  mod.rs  pest_parser.rs  rsdl.pest  treeconv.rs
