[package]
name = "rsdl"
version = "0.3.3"
edition = "2021"

[features]
serde = ["dep:serde", "smallvec/serde"]

[dependencies]
smallvec = "1.11.0"
tracing = "0.1.37"
pest = "2.7.1"
pest_derive = "2.7.1"
structopt = "0.3"
tracing-subscriber = "0.3.17"
serde = { optional = true, version = "1", features = ["derive"] }

[[bin]]
name = "rsdl"
path = "src/bin/main.rs"
